Added code for get article api
